--- a/dependencies/requirements.txt
+++ b/dependencies/requirements.txt
@@ -2,3 +2,6 @@ asgiref==3.10.0
 Django==4.2.25
 sqlparse==0.5.3
 typing_extensions==4.15.0
+djangorestframework==3.14.0
+django-cors-headers==4.3.1
+Pillow==10.0.1
